--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.5', 'nightly']
+        julia-version: ['1.6', 'nightly']
         os: [ubuntu-latest, macOS-latest, windows-latest]
       fail-fast: false
 
@@ -32,3 +32,4 @@ jobs:
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
+          comment: false
