--- a/Project.toml
+++ b/Project.toml
@@ -8,4 +8,4 @@ Arblib = "fb37089c-8514-4489-9461-98f9c8763369"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
-Arblib = "0.4.1"
+Arblib = "0.4.1, 0.5"
