--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,4 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 Arblib = "0.4.1, 0.5, 0.6"
-SpecialFunctions = "1"
+SpecialFunctions = "1, 2"
