Update CI to also test version 1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.6', 'nightly']
+        julia-version: ['1.6', '1', 'nightly']
         os: [ubuntu-latest, macOS-latest, windows-latest]
       fail-fast: false
 
