--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,11 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 [compat]
 Arblib = "0.8"
 SpecialFunctions = "1, 2"
+
+[extras]
+PropCheck = "ca382230-33be-11e9-0059-d981d03070e4"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["PropCheck", "Random", "Test"]
