--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,10 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 Arblib = "1"
+Random = "1.6"
 SpecialFunctions = "1, 2"
+Test = "1.6"
+julia = "1.6"
 
 [extras]
 PropCheck = "ca382230-33be-11e9-0059-d981d03070e4"
