--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
 Arblib = "1"
+PropCheck = "0.10"
 Random = "1.6"
 SpecialFunctions = "1, 2"
 Test = "1.6"
